--- a/MyTradeMTG/MyTradeMTG.csproj
+++ b/MyTradeMTG/MyTradeMTG.csproj
@@ -1047,6 +1047,8 @@
     <Content Include="Views\User\MTGPurchaseSell.cshtml" />
     <Content Include="Views\User\WalletTransfer.cshtml" />
     <Content Include="Views\Admin\FranchiseRequestList.cshtml" />
+    <Content Include="Views\AdminReports\SalesReportsForAdmin.cshtml" />
+    <Content Include="Views\AdminReports\ViewReports.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
