--- a/MyTradeMTG/MyTradeMTG.csproj
+++ b/MyTradeMTG/MyTradeMTG.csproj
@@ -1058,6 +1058,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Document\" />
     <Folder Include="PanUpload\" />
     <Folder Include="plugins\apex\" />
     <Folder Include="Views\API\" />
