--- a/MyTradeMTG/bin/MyTradeMTG.dll.config
+++ b/MyTradeMTG/bin/MyTradeMTG.dll.config
@@ -24,6 +24,7 @@
     <add key="AdminPinGeneration" value="Dear [Name], Your requested pin has been successfully approved by admin. MY TRADE"/>
     <add key="OTP" value="Dear [Name], Your OTP [OTP] for [USEDFOR]. MY TRADE"/>
     <add key="IdActivated" value="Dear [Name], Your Profile is activated successfully with package [Package]. Kindly check your account for more details. MY TRADE"/>
+    <add key="ProfileInfoedited" value="Dear  [Name], Your OTP [OtpVerify] is one time OTP proceed on Profile Information for edit. MY TRADE GLobal"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
