--- a/MyTradeMTG/MyTradeMTG.csproj
+++ b/MyTradeMTG/MyTradeMTG.csproj
@@ -1267,6 +1267,7 @@
     <Content Include="Views\User\PrintWelcomeLetter.cshtml" />
     <Content Include="Views\AdminReports\PrintWelcomeLetter.cshtml" />
     <Content Include="Views\Franchise\WalletTransfer.cshtml" />
+    <Content Include="Views\Home\AutoUpgradeTR2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
