--- a/MyTradeMTG/MyTradeMTG.csproj
+++ b/MyTradeMTG/MyTradeMTG.csproj
@@ -1269,6 +1269,7 @@
     <Content Include="Views\Franchise\WalletTransfer.cshtml" />
     <Content Include="Views\Home\AutoUpgradeTR2.cshtml" />
     <Content Include="Views\User\TransferToMTGWallet.cshtml" />
+    <Content Include="Views\User\Test.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
